tests/negative/gold/no_nl3_test.gold
tests/negative/no_nl3_test.toit:7:5: error: Incomplete expression
  if
    ^
tests/negative/no_nl3_test.toit:7:5: error: Missing ':' for 'if' condition
  if
    ^
Compilation failed.
